--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,27 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	mapstructVersion = "1.5.3.Final"
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.0.1'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.0.1'
+	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.3.Final'
+	implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.3.Final'
+	testImplementation 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
